<resources>
	<string name="app_name" translatable="false">KonnectAndroid</string>
	<string name="add">Add</string>
	<string name="no_perm_audio">Permission for audio not granted. Visualizer can\'t run.</string>
	<string name="addConnection">Add a Connection</string>
	<string name="settings">Settings</string>
	<string name="PREFS_show_hidden" translatable="false">show_dot_files</string>
	<string name="default_hidden">default Hidden</string>
	<string name="displayed">Displayed</string>
	<string name="PREFS_save_pass" translatable="false">save_pass</string>
	<string name="PREFS_save_pass_title">Save passwords</string>
	<string name="PREFS_show_hidden_title">Show hidden (dot) files</string>
	<string name="PREFS_rem_local" translatable="false">rem_local</string>
	<string name="PREFS_rem_local_title">Remember Local Directory</string>
	<string name="PREFS_rem_remote" translatable="false">rem_remote</string>
	<string name="PREFS_rem_remote_title">Remember Remote Directory</string>
	<string name="PREFS_network_transfers" translatable="false">trans_wifi_only</string>
	<string name="PREFS_network_transfers_title">Do tranfers over WIFI networks only</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="photos">My Photos</string>
	<string name="music">My Music</string>
	<string name="contacts">My Contacts</string>
	<string name="files">My Files</string>
	<string name="empty">empty</string>

	<!--	<string name="hello_blank_fragment">Hello blank fragment</string>-->
	<string name="view_contacts">View contacts</string>
	<string name="no_address">no address</string>
	<string name="no_intent_found">no intent found</string>
	<string name="contacts_list_search_results_title">contact search results %1$s</string>
	<string name="alphabet">ABC</string>
	<string name="item_disabled">This item is disabled, due to permissions</string>
	<string name="left_1">left_1</string>
	<string name="left_2">left_2</string>
	<string name="resize">item size</string>
	<string name="dialog_fire_missiles">Fire missiles?</string>
	<string name="fire">fire</string>
	<!--	<string name="cancel">cancel</string>-->
	<string name="username">username</string>
	<string name="password">password</string>
	<string name="gdrive">Google Drive</string>
	<string name="onedrive">Onedrive</string>
	<string name="dropbox">Dropbox</string>
	<string name="box">BOX</string>
	<string name="lorem_ipsum">qwerty</string>
	<string name="req_perm">request permission</string>
	<string name="no_perm">Permission Not Granted</string>
	<string name="read_contacts">Read Contacts</string>
	<string name="ftp">FTP/SFTP/FTPS</string>
	<string name="local_network">local network</string>
	<string name="icon_resize">Icon Size</string>
	<string name="ok">OK</string>
	<string name="eg_ip_addr">eg. 192.168.1.100</string>
	<!--	<string name="testConnect">test-connection</string>-->
	<string name="testConnect">test</string>
	<string name="ftpConnect">FTP connection</string>
	<string name="server">host / server name</string>
	<string name="rename">rename %1$s</string>
	<string name="port">port</string>
	<string name="failed_connect">Failed to connect</string>
	<string name="contactMethod">Share Via:</string>
	<string name="no_app_intent">No application can handle this type</string>
	<string name="ignore">ignore</string>
	<string name="close">close</string>
	<string name="warning">WARNING</string>
	<string name="mobile_network">Connected to a mobile network.
		Your carrier may impose extra charges by using this appliication.
		Suggestion: disable the mobile network and restart this application
	</string>
	<!--	<string name="no_network">No network connection - only this device will be available</string>-->
	<string name="no_network">No network connection</string>
	<string name="wifi_connected">WIFI connected</string>
	<string name="lost_connection">lost connection</string>
	<string name="init_path">initial path</string>
	<string name="remove">remove</string>
	<string name="move">move</string>
	<string name="rusure">Are you sure?</string>
	<string name="delete_conn_x">Delete connection to %1$s?</string>
	<string name="name">name</string>
	<string name="neutral">neutral</string>
	<string name="edit_conn">edit connection</string>
	<string name="eg_conn">Eg. My Connection</string>
	<string name="domain">domain</string>
	<string name="connto">connect to …</string>
	<string name="title">title</string>
	<string name="conn_good">Connection is good</string>
	<string name="save_OK">Press OK to save</string>
	<string name="conn_bad">Connection is bad</string>
	<string name="adjust_sett">Adjust the settings</string>
	<string name="eg_server">ftp.myserver.com</string>
	<string name="up">..</string>
	<string name="delete">delete</string>
	<string name="open">open</string>
	<string name="copy">copy</string>
	<string name="edit">edit</string>
	<string name="search_shares">Search this Host for Shares</string>
	<string name="search_shares_text">If share name is not certain:</string>
	<string name="share_name">Share name</string>
	<string name="my_network">My Network</string>
	<string name="error">error</string>
	<string name="expand__menu">Expand/Shrink Menu</string>
	<string name="anon_user">anonymous user</string>
	<string name="need_user">Need Username (or set Anonymous) to proceed</string>
	<string name="need_host">Need Server/Host Name (or IP address) to proceed</string>
	<string name="smb_share">Local Network Share</string>
	<string name="cannot_conn">Unable to Retrieve list from server</string>
	<string name="find_share">Find Share name</string>
	<string name="num_conn">number_of_connections</string>
	<string name="display_name">display_name</string>
	<string name="conn">connection</string>
	<string name="token">token</string>
	<string name="conn_str">connection_string</string>
	<string name="conn_type">connection_type</string>
	<string name="icloud">iCloud</string>
	<string name="remove_all">Remove all Custom Connections</string>
	<!--	<string name="remove_settings">remove all settings</string>-->
	<string name="remove_settings">Remove all Customisations and all Settings</string>
	<string name="PREFS_TITLE_network_transfers">Transfer only over Wifi</string>
	<string name="Display">Display</string>
	<string name="Transfers">Transfers</string>
	<string name="type_remove_settings">Type \'remove\' to Remove all Customisations and Setting</string>
	<string name="blank_string" />
	<string name="msa_client_id" translatable="false">8cd4df27-a31a-4ede-a3b0-f1f7408ac8f5</string>
	<string name="directory_tenant_id" translatable="false">e04a8f8b-842f-46d5-a824-ed7902b2cf81</string>
	<string name="object_id" translatable="false">88c7bf4c-8478-4434-bb00-8fc06eb88d6c</string>
	<string name="aad_secretKey">]hp_V–31–21@@F=mh@r0NTwQu1mGMJ=C</string>
	<string name="aad_secret_encrypted" translatable="false">BA2E7462D0A28CF496A6E94E770FC0E7DF65FC258D60E04B7EEB2D2D12795FD20CC8EE72A457C3AAA35F79627FD13728</string>
	<string name="aad_redirectUriSignin" translatable="false">http://localhost:8080/msal4jsample/secure/aad</string>
	<string name="aad_redirectUriGraph" translatable="false">http://localhost:8080/msal4jsample/graph/me</string>
	<string name="auth_ms">Launching web browser to authenticate with Microsoft</string>
	<string name="conn_again">No valid Access Token. Delete and add this connectionn again</string>
	<string name="accountsMSAL">Select your Microsoft account</string>
	<string name="useGoogleAcc">Using Google account</string>
	<string name="proceed">proceed</string>
	<string name="another">another account</string>

	<string-array name="contactShare">
		<item>Email</item>
		<item>SMS/MMS (Text Message)</item>
	</string-array>
</resources>
