<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/hamburger"-->
<!--        android:orderInCategory="1"-->
<!--        app:showAsAction="ifRoom"-->
<!--        android:title="@string/expand__menu" />-->



    <item
        android:id="@+id/add_connect"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/app_name" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        android:title="@string/settings" />

    <item
        android:id="@+id/resize"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        android:title="@string/resize" />

</menu>